# pythiatransformer

./: .gitignore  .readthedocs.yml  Pythia_Generator.py  README.md  alberto.py  api.html  data_processing.py  environment.yml  events.root  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  pythia_generator.py  requirements.txt  search.html  searchindex.js  test_alberto.py  torch_transformer_information.txt  transformer.py
.doctrees/: api.doctree  environment.pickle  index.doctree  installation.doctree  usage.doctree
.doctrees/_api/: pythiatransformer.data_processing.doctree  pythiatransformer.main.doctree  pythiatransformer.pythia_generator.doctree  pythiatransformer.transformer.doctree  tests.doctree  tests.test_data_processing.doctree  tests.test_toy.doctree
.github/workflows/: ci.yml  docs.yml  tests.yml
_api/: modules.html  pythiatransformer.data_processing.html  pythiatransformer.html  pythiatransformer.inference.html  pythiatransformer.main.html  pythiatransformer.pythia_generator.html  pythiatransformer.toy.evaluate_toy.html  pythiatransformer.toy.html  pythiatransformer.toy.toy_model.html  pythiatransformer.transformer.html  tests.html  tests.test_data_processing.html  tests.test_pythia_generator.html  tests.test_toy.html  tests.test_transformer.html  tests_index.html
_modules/: index.html
_modules/pythiatransformer/: data_processing.html  inference.html  main.html  pythia_generator.html  transformer.html
_modules/tests/: test_data_processing.html  test_pythia_generator.html  (+2 more)
_sources/: index.rst.txt  installation.md.txt  usage.md.txt
docs/: api.rst  conf.py  index.rst  installation.md  rep_structure.md  usage.md
pythia_generator/: __init__.py  pythia_generator.py
pythiatransformer/: __init__.py  data_processing.py  events.root  fastjet.py  fastjet_preparation.py  inference.py  jet_clustering.py  main.py  old_data_processing.py  pythia_generator.py  reading_tensor.py  test_output_transformer.py  toy.py  toy_main.py  transformer.py  transformer_model_1M.pt  transformer_model_eos.pt  transformer_model_eos_2.pt  transformer_model_sos.pt  transformer_model_true.pt
tests/: test_data_processing.py  test_pythia_generator.py  test_toy.py  test_transformer.py  toy_testing_save.root
(+60 files in other folders)
