[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pythiatransformer" 
version = "0.1.0"
description = "Transformer trained on Pythia8 events"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Leonardo Bandiera Marlia", email = "l.bandieramarlia@studenti.unipi.it" },
    { name = "Irene Bini", email = "i.bini3@studenti.unipi.it" },
    { name = "Alberto Montanelli", email = "a.montanelli@studenti.unipi.it" }
]
dependencies = [
  "numpy",
  "uproot",
  "loguru",
  "torch",
  "scipy",
  "matplotlib",
  "awkward"
]

[project.optional-dependencies]
dev = ["ruff>=0.5"]
docs = [
  "sphinx>=7.0",
  "myst-parser>=2.0",
  "sphinxawesome-theme>=5.0",
  "sphinx-autodoc-typehints>=2.1"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pythiatransformer*"]

[tool.ruff]
line-length = 78
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "PL", "D"]
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"pythiatransformer/transformer.py" = ["PLR0913"]
"pythiatransformer/inference.py" = ["PLR0913", "PLR2004"]
"pythiatransformer/toy/toy_model.py" = ["PLR0913", "PLR2004"]
"pythiatransformer/toy/evaluate_toy.py" = ["PLR0913", "PLR2004"]

